[gd_scene load_steps=2 format=3 uid="uid://dsave_confirm_church"]

[ext_resource type="Script" path="res://scenes/ui/shops/screens/church_save_confirm.gd" id="1_save_confirm"]

[node name="ChurchSaveConfirm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_save_confirm")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Record Your Adventure"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Slot1Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "Slot 1: Empty"

[node name="Slot2Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "Slot 2: Empty"

[node name="Slot3Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "Slot 3: Empty"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "BACK"

[node name="InfoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Select a slot to save your progress."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ConfirmPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ConfirmVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ConfirmPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ConfirmLabel" type="Label" parent="CenterContainer/VBoxContainer/ConfirmPanel/ConfirmVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Overwrite this save?"
horizontal_alignment = 1

[node name="ConfirmButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ConfirmPanel/ConfirmVBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ConfirmYesButton" type="Button" parent="CenterContainer/VBoxContainer/ConfirmPanel/ConfirmVBox/ConfirmButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "YES"

[node name="ConfirmNoButton" type="Button" parent="CenterContainer/VBoxContainer/ConfirmPanel/ConfirmVBox/ConfirmButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "NO"
